# Soroban-Cookbook-

./: .gitignore  404.html  CODE_OF_CONDUCT.html  CONTRIBUTING.html  CONTRIBUTING.md  Cargo.toml  PHASE_AUDIT_LOG.md  README.md  ROADMAP.md  index.html  phase 8 issues.md  print.html  rust-toolchain.toml  searcher-09f2665d.js  searchindex-3ccc4abe.js  searchindex-5061486f.js  searchindex-9ac498c3.js  tarpaulin.toml  toc-5cbb0cf0.js  toc-6d4fb062.js  toc-ecdbaa17.js  toc.html
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  test.yml
adr/: 001-record-architecture-decisions.html  index.html  template.html
book/src/: CONTRIBUTING.md  SUMMARY.md
book/src/docs/: README.md  benchmarks.md  best-practices.md  common-pitfalls.md  defi-best-practices.md  quick-reference.md  security-best-practices.md  token-development-video.md
book/src/examples/: advanced.md  basics.md  defi.md  intermediate.md  nfts.md  storage-patterns.md  tokens.md  vault-strategies.md
book/src/guides/: ethereum-to-soroban.md  introduction-video.md  local-simulation.md  macos-setup.md  testing.md  video-creation.md
docs/: README.md  benchmarks.html  benchmarks.md  best-practices.html  common-patterns.html  common-patterns.md  common-pitfalls.html  cross-contract-patterns.html  gas-benchmarks.md  glossary.html  glossary.md  governance-rbac-multisig-timelock.md  macos-setup.md  quick-reference.html  storage-types.md  style-guide.html  testing-guide.md  token-development-video.html  troubleshooting.html
examples/: README.md  advanced.html  ajo-factory.html  basics.html  defi.html  error-handling.html  events.html  governance.html  intermediate.html  nfts.html  oracle-pattern.html  pause-unpause.html  storage-patterns.html  tokens.html  vault-strategies.html
examples/advanced/: README.md
examples/advanced/02-timelock/: README.md
examples/advanced/03-cross-contract-optimization/: Cargo.toml  README.md
examples/advanced/03-oracle-pattern/: Cargo.toml  README.md
examples/advanced/03-proxy-admin/: Cargo.toml  README.md
examples/advanced/03-registry-access-controls/: Cargo.toml  README.md
examples/advanced/04-cross-contract-integration-testing/: Cargo.toml
examples/advanced/04-cross-contract-integration-testing/src/: lib.rs  test.rs
examples/advanced/04-upgradeable-proxy/: Cargo.toml  README.md
examples/advanced/contract-registry/: Cargo.toml  README.md
examples/basics/: README.md
examples/basics/02-storage-patterns/: Cargo.toml
examples/basics/02-storage-patterns/src/: lib.rs  test.rs
examples/basics/03-authentication/: Cargo.toml  README.md
examples/basics/03-authentication/src/: lib.rs  test.rs
examples/basics/03-custom-errors/: Cargo.toml
examples/basics/03-custom-errors/src/: test.rs
examples/basics/04-events/: Cargo.toml
examples/basics/04-events/src/: test.rs
examples/basics/06-validation-patterns/: Cargo.toml  README.md
examples/basics/06-validation-patterns/src/: lib.rs  test.rs
examples/governance/: README.md
examples/hello-world/: Cargo.toml  README.md
examples/nfts/: README.md
examples/storage/: README.md
examples/tokens/: README.md
examples/tokens/allowance-pattern/: Cargo.toml
examples/tokens/allowance-pattern/src/: lib.rs  test.rs
guides/: README.md  deployment.html  ethereum-to-soroban.html  ethereum-to-soroban.md  getting-started.html  getting-started.md  introduction-video.html  local-simulation.html  macos-setup.html  testing.html  video-creation.html
scripts/: benchmark.sh  ci-exclude-packages.txt  ci-workspace.sh
shared/: Cargo.toml  README.md
shared/src/: lib.rs  test_events.rs
tests/integration/: Cargo.toml  FRAMEWORK.md  README.md
tests/integration/tests/: framework_tests.rs  integration_tests.rs
tests/integration/tests/helpers/: mod.rs
tests/integration/tests/mocks/: mod.rs
tests/security/: Cargo.toml  README.md
(+115 files in other folders)
