[package]
name = "authentication"
version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
soroban-validation = { path = "../../../shared" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
