[package]
name = "validation-patterns"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
soroban-validation = { path = "../../../shared" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
